--- a/sobre.html
+++ b/sobre.html
@@ -1,80 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!DOCTYPE html>
+    <<!DOCTYPE html>
+    <html lang="pt-BR">
+    <head>
+        <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questionário de Diagnóstico Precoce de Autismo</title>
+    <title>Sobre e Termos de Uso - Autismo Questionário</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
             color: #333;
         }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            text-align: center;
-            color: #007BFF;
-        }
-        h2 {
-            margin-top: 30px;
-            color: #007BFF;
-        }
-        p {
-            line-height: 1.6;
-        }
-        .button {
-            display: block;
+
+        /* Menu de navegação */
+        .navbar {
             width: 100%;
-            padding: 10px;
-            text-align: center;
-            background-color: #007BFF;
+            background-color: #2196F3;
+            overflow: hidden;
+            padding: 20px 0;
+            position: fixed;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .navbar a {
+            float: left;
+            margin-left: 20px;
             color: #fff;
             text-decoration: none;
-            border-radius: 5px;
-            margin-top: 20px;
-            transition: background-color 0.3s ease;
+            font-weight: bold;
+            font-size: 1.2em;
         }
-        .button:hover {
-            background-color: #0056b3;
+
+        .navbar a:hover {
+            color: #FFEB3B;
         }
-        footer {
-            margin-top: 40px;
+
+        /* Banner */
+        .banner {
+            background-color: #4CAF50;
+            color: white;
+            padding: 100px 20px;
             text-align: center;
-            font-size: 0.9em;
-            color: #777;
+            margin-top: 60px;
+        }
+
+        .banner h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+            color: #FFEB3B;
+        }
+
+        .banner p {
+            font-size: 1.5em;
+        }
+
+        /* Seção de aviso */
+        .notice {
+            padding: 50px 20px;
+            background-color: #FFEB3B;
+            color: #333;
+            text-align: center;
+        }
+
+        .notice h2 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+
+        .notice p {
+            font-size: 1.2em;
+            line-height: 1.6;
+        }
+
+        /* Seção de sugestão */
+        .suggestion {
+            padding: 50px 20px;
+            background-color: #2196F3;
+            color: white;
+            text-align: center;
+        }
+
+        .suggestion h2 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+
+        .suggestion p {
+            font-size: 1.2em;
+            line-height: 1.6;
+        }
+
+        .suggestion form {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        .suggestion input, .suggestion textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: none;
+            border-radius: 5px;
+        }
+
+        .suggestion input[type="submit"] {
+            background-color: #FFEB3B;
+            color: #2196F3;
+            border: none;
+            cursor: pointer;
+            font-size: 1.2em;
+        }
+
+        .suggestion input[type="submit"]:hover {
+            background-color: #f0c14b;
+        }
+
+        /* Seção de termos de uso */
+        .terms {
+            padding: 50px 20px;
+            background-color: #FFEB3B;
+            color: #333;
+        }
+
+        .terms h2 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+
+        .terms p {
+            font-size: 1.2em;
+            line-height: 1.6;
+        }
+
+        .terms ol {
+            font-size: 1.2em;
+            line-height: 1.6;
+            margin: 20px 0;
+        }
+
+        /* Rodapé */
+        .footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+            margin-top: 50px;
+        }
+
+        .footer a {
+            color: #FFEB3B;
+            text-decoration: none;
+        }
+
+        .footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Questionário de Diagnóstico Precoce de Autismo</h1>
-        <p>O questionário de diagnóstico precoce de autismo foi desenvolvido para ajudar pais e responsáveis a identificar sinais de autismo em crianças. Embora não substitua uma avaliação profissional, ele pode fornecer uma base inicial para uma consulta com um especialista.</p>
 
-        <h2>Instruções</h2>
-        <p>Leia cada pergunta com atenção e responda de acordo com o comportamento observado em seu filho. O questionário deve ser preenchido com sinceridade para obter um resultado mais preciso.</p>
+    <!-- Menu de navegação -->
+<div class="navbar">
+    <a href="index.html">Início</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="serviso.html">Serviço</a>
+    <a href="contato.html">Contato</a>
+</div>
 
-        <a href="questionario.html" class="button">Começar o Questionário</a>
 
-        <footer>
-            <p><strong>Atenção:</strong> O resultado deste questionário não é um diagnóstico. Se você suspeita que seu filho possa ter autismo, consulte um profissional de saúde.</p>
-        </footer>
+    <!-- Banner -->
+    <div class="banner">
+        <h1>Sobre e Termos de Uso</h1>
+        <p>Descubra mais sobre a nossa missão, visão e leia nossos termos de uso.</p>
     </div>
+
+    <!-- Seção de aviso -->
+    <div class="notice">
+        <h2>Aviso Importante</h2>
+        <p>Este site oferece uma ferramenta de avaliação para ajudar a identificar sinais de autismo, mas não substitui uma consulta com um especialista qualificado. É fundamental buscar o auxílio de um profissional para um diagnóstico preciso e um plano de tratamento adequado.</p>
+    </div>
+
+    <!-- Seção de sugestão -->
+    <div class="suggestion">
+        <h2>Deixe sua Sugestão</h2>
+        <p>Queremos ouvir você! Se você tiver sugestões ou feedback sobre o nosso site, por favor, preencha o formulário abaixo.</p>
+        <form action="enviar-sugestao.php" method="post">
+            <input type="text" name="nome" placeholder="Seu Nome" required>
+            <input type="email" name="email" placeholder="Seu Email" required>
+            <textarea name="sugestao" rows="6" placeholder="Sua Sugestão" required></textarea>
+            <input type="submit" value="Enviar Sugestão">
+        </form>
+    </div>
+
+    <!-- Seção de termos de uso -->
+    <div class="terms">
+        <h2>Termos e Condições</h2>
+        <p>Bem-vindo ao nosso site. Ao acessar e usar este site, você concorda em cumprir e estar vinculado aos seguintes termos e condições:</p>
+        <ol>
+            <li><strong>Uso do Site:</strong> O conteúdo fornecido neste site é apenas para fins informativos. Não substitui consultas médicas profissionais e não deve ser usado para diagnosticar ou tratar condições médicas.</li>
+            <li><strong>Responsabilidade:</strong> Nós não nos responsabilizamos por qualquer dano ou prejuízo resultante do uso ou da confiança nas informações fornecidas neste site.</li>
+            <li><strong>Modificações:</strong> Reservamos o direito de modificar ou atualizar os termos de uso a qualquer momento, sem aviso prévio.</li>
+            <li><strong>Privacidade:</strong> Sua privacidade é importante para nós. Consulte nossa <a href="politica-privacidade.html">Política de Privacidade</a> para mais informações sobre como coletamos e utilizamos seus dados.</li>
+            <li><strong>Contato:</strong> Se você tiver dúvidas ou preocupações sobre estes termos, entre em contato conosco através do <a href="contato.html">formulário de contato</a>.</li>
+        </ol>
+    </div>
+
+    <!-- Rodapé -->
+    <div class="footer">
+        <p>&copy; 2024 Autismo Questionário. Todos os direitos reservados.</p>
+        <p><a href="politica-privacidade.html">Política de Privacidade</a> | <a href="termos-uso.html">Termos de Uso</a></p>
+    </div>
+
+</body>
+</html>
+
 </body>
 </html>
 
